# PetraVM

./: 404.html  CONTRIBUTING.md  Cargo.toml  README.md  bibliography.html  index.html  print.html  rust-toolchain.toml  searchindex.js  specification.html  toc.html  toc.js
.github/: CODEOWNERS
.github/workflows/: audit.yml  book.yml  checkout.yml  ci.yml  labeler.yml  lint.yml  update-binius-deps.yml
assembly/: Cargo.toml
assembly/benches/: vrom_access.rs
assembly/src/: call.rs  channels.rs  collatz.rs  emulator.rs  emulator_arithmetization.rs  instruction_args.rs  instructions_with_labels.rs  integer_ops.rs  isa.rs  lib.rs  main.rs  opcodes.rs  out.txt  sli.rs  stats.rs  test_util.rs  trace.rs  util.rs  utils.rs  vrom.rs  vrom_allocator.rs
assembly/src/assembler/: mod.rs
assembly/src/compiler/: mod.rs
assembly/src/event/: alloc.rs  b128.rs  b32.rs  branch.rs  call.rs  comparison.rs  context.rs  cpu.rs  exception.rs  groestl.rs  integer_ops.rs  jump.rs  macros.rs  mod.rs  mv.rs  ram.rs  ret.rs  shift.rs  sli.rs  test_utils.rs
assembly/src/event/arithmetization/: branch.rs  cpu.rs  integer_ops.rs  mod.rs  ret.rs
assembly/src/event/arithmetization/binary_ops/: b32.rs
assembly/src/event/binary_ops/: b128.rs  b32.rs  mod.rs
assembly/src/event/gadgets/: mod.rs  right_logic_shift.rs
assembly/src/event/model/: b128.rs  b32.rs  branch.rs  call.rs  cpu.rs  integer_ops.rs  macros.rs  mod.rs  mv.rs  ret.rs  shift.rs  sli.rs
assembly/src/event/model/binary_ops/: b128.rs  b32.rs
assembly/src/execution/: emulator.rs  emulator_arithmetization.rs  mod.rs  trace.rs
assembly/src/gadgets/: integer_ops.rs  mod.rs
assembly/src/memory/: error.rs  mod.rs  ram.rs  vrom.rs  vrom_allocator.rs
assembly/src/parser/: asm.pest  instruction_args.rs  instructions_with_labels.rs  mod.rs  tests.rs
assembly/src/tests/: collatz.rs
assembly/tests/: add.rs  arith_tests.rs  bezout.rs  bit_ops.rs  bit_shifts.rs  branch.rs  collatz.rs  div.rs  exception.rs  fibnacci.rs  fibonacci.rs  func_call.rs  linked_list.rs  mul.rs  opcodes.rs  opcodes_loop.rs
assembly/tests/common/: test_runner.rs  test_utils.rs
book/: book.toml
book/src/: bibliography.bib
crates/tables/: Cargo.toml
crates/tables/src/: collatz.rs  interpreter.rs  lib.rs  sli.rs  utils.rs
docs/benches/: benchmarks.json  index.html
examples/: add.asm  all_opcodes.asm  bezout.asm  bezout_deterministic.asm  bit_ops.asm  bit_shifts.asm  branch.asm  collatz.asm  div.asm  exception.asm  fib.asm  func_call.asm  linked_list.asm  mul.asm  non_tail_long_div.asm  opcodes.asm  static_int_list_sum.asm  tail_long_div.asm
prove/: Cargo.toml
prove/src/: circuit.rs  ldi.rs  lib.rs  model.rs  prover.rs  tables.rs
prove/src/opcodes/: mod.rs  ret.rs
prove/tests/: simple.rs
prover/: Cargo.toml  README.md  generate_opcode_benchmarks.py
prover/benches/: opcodes.rs  shift.rs
prover/examples/: collatz.rs  fibonacci.rs
prover/src/: channel_utils.rs  channels.rs  circuit.rs  error.rs  isa.rs  ldi.rs  lib.rs  memory.rs  model.rs  prover.rs  table.rs  tables.rs  test_utils.rs  utils.rs
prover/src/gadgets/: aes_to_bin.rs  arithmetic_shifter.rs  b128_lookup.rs  barrel_shifter.rs  cpu.rs  mod.rs  multiple_lookup.rs  right_shifter_table.rs  state.rs  transpose.rs  u32u16.rs
prover/src/opcodes/: binary.rs  branch.rs  call.rs  comparison.rs  cpu.rs  exception.rs  gadgets.rs  groestl.rs  integer_ops.rs  jump.rs  ldi.rs  mod.rs  mv.rs  ret.rs  shift.rs  util.rs
prover/src/opcodes/binary/: b128.rs  b32.rs
prover/src/opcodes/binary_ops/: b32.rs  mod.rs
prover/tests/: exception.rs  fibonacci.rs  groestl.rs  opcodes.rs  other_examples.rs  simple.rs
scripts/: update-binius-deps.sh
verifier/: Cargo.toml
