[workspace]
members = ["assembly", "prover"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# bumpalo = { version = "3.16.0", features = ["collections"] }
# binius_field = { path = "../binius/crates/field" }
# binius_utils = { path = "../binius/crates/utils" }
# binius_m3 = { path = "../binius/crates/m3" }
# binius_core = { path = "../binius/crates/core" }
# binius_hash = { path = "../binius/crates/hash" }
# binius_math = { path = "../binius/crates/math" }
# binius_hal = { path = "../binius/crates/hal" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_math = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
