[package]
name = "zcrayvm-prover"
version.workspace = true
edition.workspace = true
authors = ["zCray Team"]

[dependencies]
binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
anyhow = "1.0"
zcrayvm-assembly = { path = "../assembly" }
bumpalo = { version = "3.16.0", features = ["collections"] }
bytemuck = { version = "1.18.0", features = [
    "derive",
    "min_const_generics",
] }
thiserror = "2.0.11"

[dev-dependencies]
zcrayvm-assembly = { path = "../assembly" }
